renames partials to includes

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,12 +12,12 @@ html(lang='en')
 		link(rel='stylesheet', href='/css/main.css')
 
 	body
-		include partials/header
+		include includes/header
 
 		.container
 			block content
 
-		include partials/footer
+		include includes/footer
 
 		//- script(src='/js/main.js')
 
