--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,6 @@ html(lang='en')
 		//- meta(name='csrf-token', content=_csrf)
 		//- link(rel='shortcut icon', href='/images/favicon.png')
 		link(rel='stylesheet', href='/css/main.css')
-
 	body
 		include includes/header
 
@@ -19,5 +18,6 @@ html(lang='en')
 
 		include includes/footer
 
-		script(src='/js/index.js')
+		//- script var exports = {};
+		script( type="module" src='/js/bundle.js')
 
