added webpack, babel, with no luck

--- a/src/public/scss/_periodic-table.scss
+++ b/src/public/scss/_periodic-table.scss
@@ -16,9 +16,9 @@
 
 body {
     font-family: Phenomena, script;
-    margin: 5vw;
-    background: #111;
-    color: #000;
+    margin: 5vw; // background: #111;
+    // color: #000;
+    color: blue;
     counter-reset: element;
 }
 
