--- a/views/experiment.pug
+++ b/views/experiment.pug
@@ -1,25 +1,23 @@
 extends layout
 
 block content
-    button#button click me
+    button#button(data-custom-open="modal-1" role="button") click me
+    button#button(data-custom-open="modal-2" role="button") click me
+    button#button(data-custom-open="modal-3" role="button") click me
+    button#button(data-custom-open="modal-4" role="button") click me
+    
+    //- div#modal-1(class="modal micromodal-slide" aria-hidden="true")
+    //-     div(class="modal__overlay" tabindex="-1" data-micromodal-close)
+    //-         div( class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title")
+    //-             div(class="modal__header")
+    //-                 h2( class="modal__title" id="modal-1-title")
+    //-                 | Micromodal 🔥                
+    //-                 button(class="modal__close" aria-label="Close modal" data-micromodal-close)
+    //-             div(class="modal__content" id="modal-1-content")
+    //-             p This is a completely accessible modal.
+    //-                 | Try hitting the <code>tab</code> key* and notice how the focus stays within the modal itself. To close modal hit the <code>esc</code> button, click on the overlay or just click the close button.         
+                
+    //-             footer(class="modal__footer")
+    //-                 button(class="modal__btn modal__btn-primary") Continue
+    //-                 button(class="modal__btn" data-custom-close="modal-1" aria-label="Close this dialog window") Close
 
-    #modal-2.modal.micromodal-slide(aria-hidden='true')
-        .modal__overlay(tabindex='-1', data-custom-close='')
-            .modal__container.w-90.w-40-ns(role='dialog', aria-modal='true', aria-labelledby='modal-2-title')
-                header.modal__header
-                    h3#modal-2-title.modal__title
-                        | 🔒 Login
-                    button.modal__close(aria-label='Close modal', data-custom-close='')
-                form.black-80(action='/')
-                    #modal-2-content.modal__content
-                        .measure
-                            label.f6.b.db.mb2.js-name(for='name') Name
-                            input#name.input-reset.ba.b--black-20.pa2.mb2.db.w-100.js-nameInput(type='text')
-                            label.f6.b.db.mb2.mt3(for='password')
-                                | Password 
-                                span.normal.black-60 (required)
-                            input#password.input-reset.ba.b--black-20.pa2.mb2.db.w-100(type='password', required='')
-                            small#name-desc.f6.black-60.db.mb2 Must be atleast 6 characters long.
-                    footer.modal__footer
-                        input.modal__btn.modal__btn-primary(type='submit', value='Login')
-                        a.f6.ml2.dark-blue.no-underline.underline-hover.js-modal-close-trigger(href='#', aria-label='Close this dialog window') Cancel
