--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,5 +19,5 @@ html(lang='en')
 		include includes/footer
 
 		//- script var exports = {};
-		script( type="module" src='/js/bundle.js')
+		script( type="module" src='/js/index.js')
 
