--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html(lang='en')
 		meta(name='theme-color' content='#4DA5F4')
 		//- meta(name='csrf-token', content=_csrf)
 		//- link(rel='shortcut icon', href='/images/favicon.png')
-		link(rel='stylesheet', href='/css/main.css')
+		//- link(rel='stylesheet', href='/css/main.css')
 	body
 		include includes/header
 
