updates views and fixes bugs

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,9 +17,9 @@ html(lang='en')
 			block content
 
 		include includes/footer
-		include mixins/modal
+		//- include mixins/modal
 
-		each elem,index in elements
-			+modal(index, elem.name, elem.electronicConfiguration)
+		//- each elem,index in elements
+		//- 	+modal(index, elem.name, elem.electronicConfiguration)
 
 		script( type="module" src='/js/index.js')
