adds periodicTable.pug

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,3 +1,6 @@
 //- footer
-//-   p © 2018 Company, Inc. All Rights Reserved
-//-   a(href="https://github.com/microsoft/typescript-node-starter", data-icon="octicon-star", data-show-count="true", aria-label="Star microsoft/typescript-node-starter on GitHub") Star
+-var date = new Date().getFullYear()
+p(style="color: red; text-align: center") © #{date} 
+    //- a(href="https://nafis-fuad.github.io", data-icon="octicon-star", data-show-count="true", aria-label="Star microsoft/typescript-node-starter on GitHub") Nafis Fuad. 
+    | Nafis Fuad
+    | All Rights Reserved
