--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,3 +1,4 @@
-//- p this is the header:
-//- a(href="/") go to home
-//- a(href="/about") go to about
+p this is the header: 
+a(href="/") go to home 
+a(href="/periodicTable") go to the Periodic Table 
+a(href="/about") go to about
