--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,4 @@
 extends layout
 
 block content
-    include mixins/list
-    include mixins/modal
-    ol.periodic-table
-        each elem, index in elements
-            +list(elem, index, requiredColors[elem.groupBlock])
-
-    each elem,index in elements
-        +modal(index, elem.name, elem.electronicConfiguration)
+    h1 HI HOW ARE YOU DOINg?
