--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,15 +1,10 @@
 doctype html
 html(lang='en')
 	head
-		meta(charset='utf-8')
-		meta(http-equiv='X-UA-Compatible', content='IE=edge')
-		meta(name='viewport', content='width=device-width, initial-scale=1.0')
-		title #{title} - Periodic Table
-		meta(name='description', content='A simple periodic table')
-		meta(name='theme-color' content='#4DA5F4')
-		//- meta(name='csrf-token', content=_csrf)
-		//- link(rel='shortcut icon', href='/images/favicon.png')
-		//- link(rel='stylesheet', href='/css/main.css')
+		include includes/gtag
+		include includes/meta
+		script( type="module" src='/client/index.js')
+
 	body
 		include includes/header
 
@@ -17,5 +12,3 @@ html(lang='en')
 			block content
 
 		include includes/footer
-		
-		script( type="module" src='/js/index.js')
