adds materialize-css

--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -10,7 +10,8 @@
 body {
     /* background: red; */
     overflow-x: hidden;
-    color: black
+    color: black;
+    font-family: 'Roboto', sans-serif;
 }
 
 .modal__header {
