--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,13 @@ html(lang='en')
 	head
 		include includes/gtag
 		include includes/meta
-		script( type="module" src='/client/index.js')
+		include includes/fontslink
+		//- if title === "Home"
+			script( type="module" src='/client/index.js')
+		//- else if title === "Periodic Table"
+		//- 	script(type="module" src="/client/periodic.js")
+		//- script( type="module" src='/client/index.js')
+		script(src='/client/index.js')
 
 	body
 		include includes/header
