--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -1,19 +1,23 @@
-:root {
-    --microtip-transition-duration: 0.2s;
-    --microtip-transition-delay: 0.1s;
-    --microtip-transition-easing: ease-out;
-    --microtip-font-size: 16px;
-    --microtip-font-weight: bold;
-    /* --microtip-text-transform: uppercase; */
-}
-
 body {
-    /* background: red; */
     overflow-x: hidden;
     color: black;
     font-family: 'Roboto', sans-serif;
 }
 
-.modal__header {
-    color: rebeccapurple
+@media only screen and (min-width: 993px) {
+    .container {
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 601px) {
+    .container {
+        width: 85%;
+    }
+}
+
+.container {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%;
 }
