--- a/src/public/css/periodic-table.css
+++ b/src/public/css/periodic-table.css
@@ -26,13 +26,12 @@ body {
     content: counter(element);
     position: absolute;
     bottom: 5px;
-    left: 6px;
     font-size: .9vw;
     font-weight: lighter;
 }
 
 .periodic-table>li abbr {
-    font-size: 2.5vw;
+    font-size: 3.5vh;
 }
 
 #helium {
@@ -79,12 +78,17 @@ body {
     .periodic-table>li {
         padding: 1rem;
     }
+    .periodic-table>li abbr {
+        font-size: 4.5vh;
+    }
     .periodic-table>li abbr:after {
         content: attr(title);
         font-size: 2rem;
     }
     .periodic-table>li:before {
         font-size: 1rem;
+        bottom: 5px;
+        left: 10px;
     }
     .periodic-table>li:nth-child(n+58):nth-last-child(n+48) {
         grid-row-start: auto !important;
