--- a/views/experiment.pug
+++ b/views/experiment.pug
@@ -1,7 +1,9 @@
 extends layout
 
 include mixins/tooltip
-include mixins/checkEmpty
+include mixins/displayValidProperties
+include mixins/modal
+
 
 block content
     button#button(data-custom-open="modal-1" role="button") click me
@@ -25,4 +27,29 @@ block content
         +tooltip("li","HI, i'm doing great", "top-right", "large", "its a good tooltip")    
         +tooltip("li","HI, i'm doing great, and yea, I'm doing pretty darn great. As great as a man and every ado in his  aisdfver ladilf eyou know??", "bottom", "large", "its a good tooltip")    
 
-    +isEmpty(" ")
+    +displayValidProperties(" ")
+
+
+
+    //- button( data-target="modal1" class="btn modal-trigger")
+
+    button.waves-effect.waves-light.btn.modal-trigger(data-target=`modal1`) Modal
+    button.waves-effect.waves-light.btn.modal-trigger(data-target=`modal-12`) Modal
+
+    li.waves-effect.waves-light.btn.modal-trigger(data-target=`modal-12`) Modal
+
+
+
+    //- Modal Trigger
+    //- a.waves-effect.waves-light.btn.modal-trigger(href=`modal-whatever`) Modal
+    //- Modal Structure
+    #modal1.modal.modal-fixed-footer
+        .modal-content
+            h4 elem
+            p elemgroupblock
+        .modal-footer
+            a.modal-close.waves-effect.waves-green.btn-flat(href='#!') Agree
+
+    +modal("whatever", 12)
+
+//- rest: follow this doc: https://materializecss.com/modals.html#!
