--- a/views/mixins/list.pug
+++ b/views/mixins/list.pug
@@ -1,5 +1,5 @@
 include tooltip
 
 mixin list(elem, index, backgroundColor)
-    li(id=elem.name.toLowerCase(), class=elem.name.toLowerCase(), class=elem.groupBlock.toLowerCase(), style=`background-color: ${backgroundColor}` data-custom-open=`modal-${index}` role="button")
-        +tooltip("abbr", elem.name.toLowerCase(), elem.symbol, `${elem.name} ${elem.symbol} ${elem.groupBlock}`, "bottom", "large")
+    li.modal-trigger(id=elem.name.toLowerCase(), class=elem.name.toLowerCase(), class=elem.groupBlock.toLowerCase(), style=`background-color: ${backgroundColor}` data-target=`modal-${index}` role="button")
+        +tooltip("abbr", elem.name, elem.symbol, `${elem.name} ${elem.symbol} ${elem.groupBlock}`, "bottom")
