--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,11 +4,11 @@ html(lang='en')
 		include includes/gtag
 		include includes/meta
 		include includes/fontslink
-		
+
 		script(src='/client/index.js')
 
 	body
-		include includes/header
+		//- include includes/header
 
 		.container
 			block content
